# lin

./: CMakeLists.txt  GlobalMeshInfo.cpp  GlobalMeshInfo.h  IoData.cpp  IoData.h  LinearOperator.cpp  LinearSystemSolver.cpp  LinearSystemSolver.h  Main.cpp  SpaceOperatorLite.cpp  SpaceOperatorLite.h  Utils.cpp  Utils.h
Examples/Ex1/: README.txt  X.vtr  input.st  linlog.txt  log.out  petsc_options.txt
